app/src/main/java/com/example/mobileskillupsession/lsp/duck/good/ToyDuck.kt
package com.example.mobileskillupsession.lsp.duck.good

class ToyDuck: DuckDuck {
    override fun duckDuck() {
        println("Duck can Duck Duck")
    }
}