app/src/main/java/com/example/mobileskillupsession/lsp/duck/bad/RealDuck.kt
package com.example.mobileskillupsession.lsp.bad

class RealDuck: Duck() {
    override fun duckDuck() {
        super.duckDuck()
    }

    override fun swim() {
        super.swim()
    }
}